<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainMenuActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textViewTitleMainMenu"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleMainMenu"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/buttonCadastraConteudosMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastroConteudoButton"
            style="@style/buttonSecondary"/>

        <Button
            android:id="@+id/buttonCadastraPerguntasMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            style="@style/buttonSecondary"
            android:text="@string/cadastroPerguntasButton"/>

        <Button
            android:id="@+id/buttonVisualizaPerguntasMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visualizacaoPerguntasButton"
            style="@style/buttonSecondary"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>