<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".VisualizacaoDetalhadaActivity"
    tools:showIn="@layout/activity_visualizacao_detalhada">

    <TextView
        android:id="@+id/textViewConteudoVisualizacaoDetalhada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/schoolSubjectCardView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPerguntaVisualizacaoDetalhada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schoolSubjectCardView"
        app:layout_constraintTop_toBottomOf="@+id/textViewConteudoVisualizacaoDetalhada"
        android:textSize="20sp"
        android:textColor="@color/md_theme_light_primary"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/linearlayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_primary"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:text="@string/a"/>

                <TextView
                    android:id="@+id/textViewOpcaoAVisualizacaoDetalhada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schoolSubjectCardView"
                    android:textColor="#FFF"
                    android:textAlignment="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_primary"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:text="@string/b"/>

                <TextView
                    android:id="@+id/textViewOpcaoBVisualizacaoDetalhada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schoolSubjectCardView"
                    android:textColor="#FFF"
                    android:textAlignment="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPerguntaVisualizacaoDetalhada">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/md_theme_light_primary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewOpcaoCVisualizacaoDetalhada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schoolSubjectCardView"
                    android:textAlignment="center"
                    android:textColor="#FFF" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/md_theme_light_primary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewOpcaoDVisualizacaoDetalhada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schoolSubjectCardView"
                    android:textAlignment="center"
                    android:textColor="#FFF" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/md_theme_light_primary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewOpcaoEVisualizacaoDetalhada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schoolSubjectCardView"
                    android:textAlignment="center"
                    android:textColor="#FFF" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout2">

        <androidx.cardview.widget.CardView
            android:padding="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/md_theme_light_primary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rightOption"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewOpcaoCorretaVisualizacaoDetalhada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schoolSubjectCardView"
                    android:textAlignment="center"
                    android:textColor="#FFF" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>